Exercise 2.09: Project v.1.3/manifests/todo/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
      - name: todo
        image: astranero/todo_app:v1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: persistent
            mountPath: /usr/src/shared/files
      - name: todo-backend
        image: astranero/todo_backend:v1.5
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
      volumes:
      - name: persistent
        persistentVolumeClaim:
          claimName: todo-pvc
