Exercise 2.09: Project v.1.3/manifests/todo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todo
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-svc
            port:
              number: 8080
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: backend-todo-svc
            port:
              number: 8081
